# dc-manager

./: .clineignore  .clinerules  .dockerignore  .env.encrypted  .env.example  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  DEPLOY_CLOUD_RUN.md  Dockerfile  Dockerfile.cloudrun  Makefile  README.md  REPO_OVERVIEW.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  docker-publish.yml  main.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_multi_company.py  003_session_tokens.py  004_multi_user_per_company.py  004_multi_user_per_company_old.py
scripts/: decrypt-env.sh  decrypt_env.py  encrypt_env.py  install_hooks.py  post-merge-hook.py  pre-commit-hook.py  run.py  run_cloudrun.py  setup_env.sh
src/: main.py
src/core/: bulk_import.py  constants.py  database.py  market_deal.py  models.py  settings.py
src/utils/: __init__.py  cli_auth.py  console_ui.py  input_helpers.py  stash_helpers.py
src/web/: api.py  app.py  auth_state.py  constants.py  discord_oauth.py  rate_limit.py  session.py
tests/: test_api.py  test_database.py  test_rate_limit.py  test_session.py
