[project]
name = "dc-trade-api"
version = "3.2.0"
description = "DemocracyCraft Trading Toolbox – Bulk trading calculator, shulker scanner, and unit converter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "streamlit>=1.58.0",
    "pandas>=2.0.0",
    "uvicorn>=0.49.0",
    "fastapi>=0.137.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0.0",
]
httpx2-compat = [
    "httpx2>=0.1.0",
]

[project.scripts]
dc-trade = "src.main:main"
dc-trade-web = "src.web.app:main"
dc-trade-api = "src.web.api:run"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
per-file-ignores = { "alembic/*" = ["E402"] }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]
